[package]
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
name = "rogue-ai-2nd"
version = "0.0.1"

[dependencies]
bitflags = "1.0.1"
clap = "2.29.0"
lazy_static = "1.0.0"
regex = "0.2.3"
sloggers = "0.2.4"
num_alias = "0.1.5"
assert_approx_eq = "1.0.0"
rand = "0.4.2"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.curses-game-wrapper]
path = "../curses-game-wrapper"

[dependencies.slog]
features = ["max_level_trace", "release_max_level_warn"]
version = "2"

[features]
default = []
