[package]
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
name = "rogue-ai-2nd"
version = "0.0.1"
[dependencies]
assert_approx_eq = "1.0.0"
bitflags = "1.0.1"
clap = "2.29.0"
lazy_static = "1.0.0"
num_alias = "0.1.7"
num_cpus = "*"
rand = "0.4.2"
regex = "0.2.3"
sloggers = "0.2.6"
curses-game-wrapper = "0.0.4"

[dependencies.clippy]
optional = true
version = "*"

[dependencies.slog]
features = ["max_level_trace", "release_max_level_warn"]
version = "2"

[features]
default = []
